@@ -85,9 +85,13 @@ The following options are available for all commands.
 =item  -r DIRECTORY | URI
 
 Specifies the root of your repository.  This is mandatory for (almost) all
-commands unless you've set the C<PINTO_REPOSITORY_ROOT> environment variable
-to point to your repository.  The root can be the path or C<file://> URI of a
-local directory, or the URI where a L<pintod> server is listening.
+commands unless you set it via the C<PINTO_REPOSITORY_ROOT> environment
+variable.  The root can be the path to a local directory or an equivalent
+C<file://> URI.
+
+The root can also be the URI where a L<pintod> server is listening.  Depending
+on your server configuration, you may need to specify the port number in the
+URI, which is usually 3111.
 
 =item --no-color
 
